# HW_WEB_14

./: README.md  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/versions/: 2cfe9af01b78_init.py  6ddfcbc846cb_init.py
src/: sсhemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
test/: conftest.py  test_unit_repository_contacts.py  test_unit_repository_users.py
