[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["VladyslavBon <vladislav.bondarenko96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.9"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
alembic = "^1.12.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
fastapi-mail = "^1.4.1"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.36.0"
sphinx = "^7.2.6"
pytest = "^7.4.3"
httpx = "^0.25.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
